--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,6 @@
-<h1>WOWOWOWOWO</h1>
+<div class="text-center">
+  <h2>Entailment-Problem Solver</h2>
+  <h4>for the original Input/Output Logics and their causal counterparts.</h4>
+</div>
+
 <app-entailment></app-entailment>
