--- a/frontend/src/app/entailment/entailment.component.html
+++ b/frontend/src/app/entailment/entailment.component.html
@@ -22,38 +22,38 @@
     </span>
   </div>
 
-  <div class="logicInput">
+  <div class="logicInput container">
     <label class="form-label fw-bold logiclabel" for="radioType"> Logic: </label>
-    <div id="radioType" class="d-flex justify-content-around">
-        <div class="form-check form-check-inline" >
+    <div id="radioType" class="row row-cols-auto justify-content-lg-between">
+        <div class="form-check form-check-inline col" >
           <input class="form-check-input" id="radio1" type="radio" name="type" formControlName="type" value="OUT1">
-          <label class="form-check-label" for="radio1">OUT  <sub>1</sub></label>
+          <label class="form-check-label" for="radio1">OUT  <sub>1</sub> <sup class="text-white"> ⊥ </sup></label>
         </div>
-        <div class="form-check form-check-inline" >
+        <div class="form-check form-check-inline col" >
           <input class="form-check-input" id="radio2" type="radio" name="type" formControlName="type" value="OUT2">
-          <label class="form-check-label" for="radio2">OUT  <sub>2</sub></label>
+          <label class="form-check-label" for="radio2">OUT  <sub>2</sub> <sup class="text-white"> ⊥ </sup></label>
         </div>
-        <div class="form-check form-check-inline" >
+        <div class="form-check form-check-inline col" >
           <input class="form-check-input" id="radio3" type="radio" name="type" formControlName="type" value="OUT3">
-          <label class="form-check-label" for="radio3">OUT  <sub>3</sub></label>
+          <label class="form-check-label" for="radio3">OUT  <sub>3</sub> <sup class="text-white"> ⊥ </sup></label>
         </div>
-        <div class="form-check form-check-inline" >
+        <div class="form-check form-check-inline col" >
           <input class="form-check-input" id="radio4" type="radio" name="type" formControlName="type" value="OUT4">
-          <label class="form-check-label" for="radio4">OUT  <sub>4</sub></label>
+          <label class="form-check-label" for="radio4">OUT  <sub>4</sub> <sup class="text-white"> ⊥ </sup></label>
         </div>
-       <div class="form-check form-check-inline" >
+       <div class="form-check form-check-inline col" >
           <input class="form-check-input" id="radio5" type="radio" name="type" formControlName="type" value="OUT1C">
           <label class="form-check-label" for="radio5">OUT  <sub>1</sub> <sup> ⊥ </sup></label>
         </div>
-        <div class="form-check form-check-inline" >
+        <div class="form-check form-check-inline col" >
           <input class="form-check-input" id="radio6" type="radio" name="type" formControlName="type" value="OUT2C">
           <label class="form-check-label" for="radio6">OUT  <sub>2</sub> <sup> ⊥ </sup></label>
         </div>
-        <div class="form-check form-check-inline" >
+        <div class="form-check form-check-inline col" >
           <input class="form-check-input" id="radio7" type="radio" name="type" formControlName="type" value="OUT3C">
           <label class="form-check-label" for="radio7">OUT  <sub>3</sub> <sup> ⊥ </sup></label>
         </div>
-        <div class="form-check form-check-inline" >
+        <div class="form-check form-check-inline col" >
           <input class="form-check-input" id="radio8" type="radio" name="type" formControlName="type" value="OUT4C">
           <label class="form-check-label" for="radio8"> OUT <sub>4</sub> <sup> ⊥ </sup></label>
         </div>
