--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -71,7 +71,8 @@
       (<a href="https://proceedings.kr.org/2023/15/">Ciabattoni & Rozplokhas</a>, 2023, p. 7).
     </li>
   </ul>
-  If in a causal I/O logic the entailment of a goal pair from the set of deriving pairs is given and X<sub>1</sub>, ..., X<sub>n</sub> ⊨ Y holds,
+  If in a causal I/O logic the entailment of a goal pair from the set of deriving pairs is given ((A<sub>1</sub>, X<sub>1</sub>), ..., (A<sub>n</sub>, X<sub>n</sub>) ⊢ <sub> OUT <sub>k</sub> <sup> ⊥ </sup></sub> (B, Y))
+  and X<sub>1</sub>, ..., X<sub>n</sub> ⊨ Y holds,
   then the deriving pairs also entail the goal pair in the corresponding original I/O logic.
   For more information see <a href="https://proceedings.kr.org/2023/15/">"Streamlining Input/Output Logics with Sequent Calculi" </a> by Ciabattoni and Rozplokhas.
 
